Deployment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservice
  name: myservice
spec:
  ports:
  - name: hightechport
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hightech
  type: NodePort
status:
  loadBalancer: {}
