Deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hightech-ingress
  namespace: hightech-website
spec:
  defaultBackend:
    service:
      name: hightech-service
      port:
        number: 8080
---
